<?xml version="1.0" encoding="utf-8"?>
<!--
  ~ Copyright (C) 2015 The Android Open Source Project
  ~
  ~ Licensed under the Apache License, Version 2.0 (the "License");
  ~ you may not use this file except in compliance with the License.
  ~ You may obtain a copy of the License at
  ~
  ~      http://www.apache.org/licenses/LICENSE-2.0
  ~
  ~ Unless required by applicable law or agreed to in writing, software
  ~ distributed under the License is distributed on an "AS IS" BASIS,
  ~ WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
  ~ See the License for the specific language governing permissions and
  ~ limitations under the License.
-->

<resources>
    <string name="app_name">Sum Of Us</string>

  <string name="checkin">Checkin</string>
  <string name="menu_settings">Settings</string>

  <string name="hello_world">Hello world!</string>
  <string name="action_settings">Settings</string>
  <color name="red">#FF0000</color>
  <color name="orange">#FFA500</color>
  <color name="white">#FFFFFF</color>
  <string name="player_error">Error initializing YouTube player</string>
  <string name="seek_to">Jump To</string>
  <string name="seek_to_hint">Seconds</string>
  <string name="title_activity_campaign_detail">CampaignDetailActivity</string>
  <string name="title_activity_add_new_campaign">AddNewCampaignActivity</string>
  <string name="title_activity_sign_petition">Sign the Petition</string>
  <!--string name="parse_app_id">bVRXQPXfFzWYsvtkAzLNmrwX8gqCAySdLhfmbe07</string-->
  <!--string name="parse_client_key">K1SRMMFlA6kwEnur7Ypk0X4Uw9eHBGVQBksyzk1V</string-->
  <string name="parse_app_id">LCPA3eHqb1CyiP2pmZGdDXw6I54pZKNCoxTGAsTt</string>
  <string name="parse_client_key">hweFBlma45UrDKmcRNSlcdG7Fidp6lST0Siu8tcx</string>
  <string name="facebook_app_id">577201735745344</string>

  <string name="take_action">Take Action</string>
  <string name="create_campaign">Start a new campaign</string>



  <string name="hint_title">Campaign title</string>
  <string name="hint_overview">Brief overview</string>
  <string name="hint_description">Tell your story!</string>
  <string name="hint_sign_message">Message to the campaign recipient</string>
  <string name="hint_goal">Number of signatures</string>
  <string name="hint_url">Your campaign webpage</string>

  <string name="campaign_title">What is your campaign about?</string>
  <string name="campaign_overview">What action do you want our users to take?</string>
  <string name="campaign_description">Explain the problem you want to solve and how this change will impact you, your family, or your community.</string>
  <string name="campaign_sign_message">Message to the campaign recipient</string>
  <string name="campaign_goal">Number of signatures</string>
  <string name="campaign_url">Your campaign webpage</string>

    <string name="help_title">In one or two words</string>
    <string name="help_overview">Focus on the solution. i.e. \'Raise the minimum wage in Minneapolis to $15 an hour\'</string>
    <string name="help_description">Describe the people involved and the problem they are facing. Describe the solution. Respect others.</string>
    <string name="help_message">Your petition is most likely to win by reaching an agreement with your decision maker.</string>
    <string name="help_numbers_only">Numbers only</string>

  <string-array name="category_array">
    <item>Support a good cause</item>
    <item>Corruption awareness</item>
    <item>Share good news</item>
    <item>Promote common good</item>
  </string-array>

  <string name="save_button_text">Save</string>
  <string name="cancel_button_text">Cancel</string>
  <string name="title_activity_user_profile">Profile</string>
  <string name="title_activity_photogallery_label">Gallery</string>
  <string name="title_activity_startnewcampaign_label">Start a new campaign</string>

  <!-- Strings related to login -->
    <string name="title_register_user">Register</string>
  <string name="signup">Sign up</string>
  <string name="title_activity_login">Log in</string>
  <string name="title_activity_signup">Sign up</string>
  <string name="logout">Log Out</string>
  <string name="prompt_username">User Name</string>
  <string name="prompt_useremail">Email</string>
  <string name="prompt_password">Password</string>
  <string name="prompt_password_again">Confirm password</string>
  <string name="error_intro">"Please "</string>
  <string name="error_blank_username">"enter a name, "</string>
  <string name="error_blank_useremail">"enter an email"</string>
  <string name="error_blank_password">enter a password</string>
  <string name="error_mismatched_passwords">enter the same password twice</string>
  <string name="error_join">" and "</string>
  <string name="error_end">.</string>
  <string name="progress_login">Logging you in&#8230;</string>
  <string name="progress_signup">Signing you up&#8230;</string>
  <string name="aboutus"><![CDATA[<h2>SumOfUs.org is a new world-wide movement for a better global economy.</h2>
<h3>Here’s what we stand for:</h3>

<p>&#8226;Governments that answer to citizens – not corporations</p>
<p>&#8226;Fair treatment of workers and the right of every human being to make a living, safely and ethically, for themselves and their family;</p>
<p>&#8226;The right of ordinary consumers to products that are produced and marketed ethically, sustainably and transparently;</p>
<p>&#8226;The right of communities to manage and protect their own environment and natural resources;</p>
<p>&#8226;Business models that put people and the planet first instead of being driven by shortsighted greed.</p>

<h3>Yeah, take that deep breath, close your eyes and imagine what kind of a world that could be – and then crash back to this one.</h3>

<h4>We’ve witnessed again and again what happens when powerful corporations get their way:</h4>
    <p>&#8226;Environmental and health catastrophes like Fukushima and the BP oil disaster;</p>
    <p>&#8226;A global financial crisis that destroys entire economies;</p>
    <p>&#8226;Rising food prices and starving children;<</p>
    <p>&#8226;<Familie></Familie>s from Kalamazoo to Timbuktu losing their houses and land;</p>
    <p>&#8226;Poisons pouring into our air and water.</p>


]]>
</string>


<!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
  <string name="image_url">Campaign image URL (jpg or png)</string>

  <string name="no_supported_campaigns_list">You haven\'t supported any campaigns yet \n Start now! </string>



  <string name="video_list_title">Title</string>
  <string name="error_init_failure">Initialization failure: Unable to play video</string>
    <string name="youtube_activity_fragment_placeholder">The YouTube Fragment can be placed anywhere
        in a layout. You could use this space to describe the video, load some comments or anything else you can think of.
    The benefit of using a Fragment is that your hosting Activity can be of any type.</string>
    <string name="youtube_activity_placeholder">If you don\'t want to use a Fragment,
        you can simply add a YouTubePlayerView to your layout file and handle it the same way.</string>
  <string name="player_style">Player Style</string>
  <string name="def">Default</string>
  <string name="minimal">Minimal</string>
  <string name="chromeless">Chromeless</string>
  <string name="play">PLAY</string>
  <string name="pause">PAUSE</string>



</resources>
