<?xml version="1.0" encoding="utf-8"?>



<ScrollView
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:id="@+id/scrollView"
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:fillViewport="true">



<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:background="@color/white"
    android:padding="5dp">


    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginLeft="5dp"
        android:text="@string/create_campaign"
        android:textSize="20sp"
        android:textAlignment="center"
        android:verticalScrollbarPosition="right"
        android:textStyle="bold"
        android:typeface="sans"
        android:gravity="center|center_vertical|center_horizontal"
        android:elegantTextHeight="true"
        android:layout_gravity="center"
        android:paddingTop="8dp" />

    <com.iangclifton.android.floatlabel.FloatLabel
        android:id="@+id/campaign_title"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/campaign_title"
        android:ellipsize="end"
        android:maxLines="1"
        android:maxLength="40" />

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/tvTitleHelp"
        android:visibility="visible"
        android:layout_marginLeft="5dp"
        android:text="@string/help_title"
        android:textSize="10sp"
        android:gravity="right" />

    <com.iangclifton.android.floatlabel.FloatLabel
        android:id="@+id/campaign_overview"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:inputType="textMultiLine"
        android:hint="@string/campaign_overview"
        />

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/tvOverviewHelp"
        android:visibility="visible"
        android:layout_marginLeft="5dp"
        android:text="@string/help_overview"
        android:textSize="10sp"
        android:gravity="right" />

    <com.iangclifton.android.floatlabel.FloatLabel
        android:id="@+id/campaign_description"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:inputType="textMultiLine"
        android:hint="@string/campaign_description"
        android:textIsSelectable="true" />


    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/tvDescriptionHelp"
        android:visibility="visible"
        android:layout_marginLeft="5dp"
        android:text="@string/help_description"
        android:textSize="10sp"
        android:gravity="right" />

    <com.iangclifton.android.floatlabel.FloatLabel
        android:id="@+id/campaign_sign_message"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:inputType="textMultiLine"
        android:hint="@string/campaign_sign_message"
        />

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/tvMessageHelp"
        android:visibility="visible"
        android:layout_marginLeft="5dp"
        android:text="@string/help_message"
        android:textSize="10sp"
        android:gravity="right" />

    <com.iangclifton.android.floatlabel.FloatLabel
        android:id="@+id/campaign_goal"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/campaign_goal"
        />

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/tvGoalHelp"
        android:visibility="visible"
        android:layout_marginLeft="5dp"
        android:text="@string/help_numbers_only"
        android:textSize="10sp"
        android:gravity="right" />

    <com.iangclifton.android.floatlabel.FloatLabel
        android:id="@+id/campaign_url"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:inputType="textMultiLine"
        android:hint="@string/campaign_url"
        />

    <Spinner
        android:id="@+id/categories_spinner"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content" />

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="66dp">

        <Button
            android:id="@+id/cancel_button"
            android:layout_width="80sp"
            android:layout_height="wrap_content"
            android:text="@string/cancel_button_text"
            android:layout_gravity="center_horizontal"
            android:layout_alignParentTop="true"
            android:layout_alignParentRight="true"
            android:layout_alignParentEnd="true" />

        <Button
            android:id="@+id/save_button"
            android:layout_width="80sp"
            android:layout_height="wrap_content"
            android:text="@string/save_button_text"
            android:layout_gravity="right"
            android:layout_alignParentTop="true"
            android:layout_toLeftOf="@+id/cancel_button"
            android:layout_toRightOf="@+id/upload_button"
            android:layout_toEndOf="@+id/upload_button" />

        <ImageButton
            android:id="@+id/photo_button"
            android:layout_width="80sp"
            android:layout_height="wrap_content"
            android:src="@drawable/ic_camera"
            android:layout_alignParentTop="true"
            android:layout_alignParentLeft="true"
            android:layout_alignParentStart="true" />

        <ImageButton
            android:id="@+id/upload_button"
            android:layout_width="80sp"
            android:layout_height="wrap_content"
            android:src="@drawable/ic_upload"
            android:layout_alignParentTop="true"
            android:layout_toRightOf="@+id/photo_button"
            android:layout_toEndOf="@+id/photo_button" />

    </RelativeLayout>

    </LinearLayout>

</ScrollView>
